--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -7,13 +5,16 @@
 	<title>ГЕРОИ CALL & DUTY FOREVER: WILD HUNT</title>
 	<style>
 		table {
-			border: 1px solid black;
+			border: 1px solclass black;
 			text-align: center;
-			width: 100%;
+			wclassth: 100%;
 			border-collapse: collapse;
 		}
 		td, th {
-			border: 1px solid black;
+			border: 1px solclass black;
+		}
+		#half_height {
+			height: 50%;
 		}
 	</style>
 </head>
@@ -23,158 +24,159 @@
 			<td></td><td></td><td><strong>МТ-301</strong></td><td><strong>МХ-301</strong></td><td><strong>КБ-301</strong></td><td><strong>КН-301</strong></td><td><strong>КН-302</strong></td><td><strong>ФТ-301</strong></td><td><strong>ПИ-301</strong></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="12"><strong>П<br>О<br>Н<br>Е<br>Д<br>Е<br>Л<br>Ь<br>Н<br>И<br>К</strong></td>
-			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2">Физика, 628</td><td rowspan="2">УМФ, 540</td><td height="50%"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2">Прогр. Инж., 611</td>
+			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2">Физика, 628</td><td rowspan="2">УМФ, 540</td><td class="half_height"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2">Прогр. Инж., 611</td>
 		</tr>
-		<tr><td height="50%">ТЧМК, 625</td></tr>
+		<tr><td class="half_height">ТЧМК, 625</td></tr>
+		<tr>
+			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2">Функ.ан, 628</td><td rowspan="2">УМФ, 540</td><td rowspan="2">ТЧМК, 625</td><td rowspan="2">Базы Данных, 511</td><td rowspan="2">ДУ, 515</td><td class="half_height">КА, 512</td><td rowspan="2">Прогр. Инж., 514</td>
 		</tr>
-			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2">Функ.ан, 628</td><td rowspan="2">УМФ, 540</td><td rowspan="2">ТЧМК, 625</td><td rowspan="2">Базы Данных, 511</td><td rowspan="2">ДУ, 515</td><td height="50%">КА, 512</td><td rowspan="2">Прогр. Инж., 514</td>
+		<tr><td class="half_height"></td></tr>
+		<tr>
+			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2">Физ-мех практика, 149</td><td rowspan="2" colspan="4">Базы Данных, 632</td><td class="half_height">КА, 628</td>
 		</tr>
-		<tr><td height="50%"></td></tr>
+		<tr><td class="half_height">КА, 514</td></tr>
+		<tr>
+			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2">Базы Данных, 526</td><td class="half_height">КА, 625</td><td class="half_height">КА, 514</td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2">Физ-мех практика, 149</td><td rowspan="2" colspan="4">Базы Данных, 632</td><td height="50%">КА, 628</td>
-		</tr>
-		<tr><td height="50%">КА, 514</td></tr>
-		</tr>
-			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2">Базы Данных, 526</td><td height="50%">КА, 625</td><td height="50%">КА, 514</td><td rowspan="2"></td><td rowspan="2"></td>
-		</tr>
-		<tr><td height="50%">КА, 514</td><td height="50%">КА, 628</td></tr>
-		</tr>
+		<tr><td class="half_height">КА, 514</td><td class="half_height">КА, 628</td></tr>
+		<tr>
 			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="12"><strong>В<br>Т<br>О<br>Р<br>Н<br>И<br>К</strong></td>
 			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2">Дг ТВ, 628</td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2">Компл анализ, 513</td><td rowspan="2"></td><td rowspan="2" colspan="4">ТВ и МС, 632</td><td rowspan="2">Дг ТВ, 628</td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2">Функ ан, 515</td><td rowspan="2">Уст и упр движ, 622</td><td rowspan="2" colspan="4">Ассемблер, 632</td><td rowspan="2">Базы данных, 540</td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2">Компл анализ, 513</td><td rowspan="2">ТВ, 515</td><td rowspan="2">ТВ, 601</td><td rowspan="2">ДУ, 632</td><td rowspan="2">БД, 511</td><td rowspan="2">ТВ, 623</td><td rowspan="2">Базы данных, 514</td>
 		</tr>
 		<tr></tr>
-		</tr>
-			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2">ск КМ, МЭ, 628</td><td rowspan="2">ТВ, 515</td><td height="50%">КА, 605</td><td rowspan="2">ТВ, 608</td><td rowspan="2">ТВ, 623</td><td rowspan="2">БД, 514</td><td rowspan="2"></td>
+		<tr>
+			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2">ск КМ, МЭ, 628</td><td rowspan="2">ТВ, 515</td><td class="half_height">КА, 605</td><td rowspan="2">ТВ, 608</td><td rowspan="2">ТВ, 623</td><td rowspan="2">БД, 514</td><td rowspan="2"></td>
 		</tr>
 		<tr>
-			<td height="50%">КА, 511</td>
+			<td class="half_height">КА, 511</td>
 		</tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="12"><strong>С<br>Р<br>Е<br>Д<br>А</strong></td>
 			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
-			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2" colspan="7">Ф И З И Ч Е С К А Я&nbsp&nbsp К У Л Ь Т У Р А</td>
+		<tr>
+			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2" colspan="7">Ф И З И Ч Е С К А Я&nbsp;&nbsp; К У Л Ь Т У Р А</td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2">Базы данных, 611</td><td rowspan="2">Уст и упр движ, 628</td><td rowspan="2" colspan="3">Комбинаторные алгоритмы, 632</td><td rowspan="2" colspan="2">Интернет(Web и DHTML), 509</td>
 		</tr>
 		<tr></tr>
-		</tr>
-			<td rowspan="2"><strong>V<br>16:10</strong></td><td height="50%">БД, 514</td><td rowspan="2"></td><td rowspan="2" colspan="4">ск Матроиды и графы, 632</td><td rowspan="2">Интернет, 511</td>
+		<tr>
+			<td rowspan="2"><strong>V<br>16:10</strong></td><td class="half_height">БД, 514</td><td rowspan="2"></td><td rowspan="2" colspan="4">ск Матроиды и графы, 632</td><td rowspan="2">Интернет, 511</td>
 		</tr>
 		<tr>
-			<td height="50%"></td>
+			<td class="half_height"></td>
 		</tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="12"><strong>Ч<br>Е<br>Т<br>В<br>Е<br>Р<br>Г</strong></td>
 			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"><font color="red">Я</font></td><td rowspan="2"><font color="orange">ОЧЕНЬ</font></td><td rowspan="2"><font color="yellow">СИЛЬНО</font></td><td rowspan="2"><font color="green">УСТАЛ</font></td><td rowspan="2"><font color="cyan">ДЕЛАТЬ</font></td><td rowspan="2"><font color="blue">ЭТО</font></td><td rowspan="2"><font color="purple">РАСПИСАНИЕ</font></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="12"><strong>П<br>Я<br>Т<br>Н<br>И<br>Ц<br>А</strong></td>
 			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="12"><strong>С<br>У<br>Б<br>Б<br>О<br>Т<br>А</strong></td><td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
-		</tr>
+		<tr>
 			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
+		<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 	</table>
 </body>
 </html>
