--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<tr>
 			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2">Функ.ан, 628</td><td rowspan="2">УМФ, 540</td><td rowspan="2">ТЧМК, 625</td><td rowspan="2">Базы Данных, 511</td><td rowspan="2">ДУ, 515</td><td class="half_height">КА, 512</td><td rowspan="2">Прогр. Инж., 514</td>
 		</tr>
-		<tr><td class="half_height"> </td></tr>
+		<tr><td class="half_height">&nbsp;</td></tr>
 		<tr>
 			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2">Физ-мех практика, 149</td><td rowspan="2" colspan="4">Базы Данных, 632</td><td class="half_height">КА, 628</td>
 		</tr>
@@ -100,7 +100,7 @@
 			<td rowspan="2"><strong>V<br>16:10</strong></td><td class="half_height">БД, 514</td><td rowspan="2"></td><td rowspan="2" colspan="4">ск Матроиды и графы, 632</td><td rowspan="2">Интернет, 511</td>
 		</tr>
 		<tr>
-			<td class="half_height"> </td>
+			<td class="half_height">&nbsp;</td>
 		</tr>
 		<tr>
 			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
