--- a/index.html
+++ b/index.html
@@ -28,47 +28,49 @@
 			<td></td><td></td><td><strong>МТ-301</strong></td><td><strong>МХ-301</strong></td><td><strong>КБ-301</strong></td><td><strong>КН-301</strong></td><td><strong>КН-302</strong></td><td><strong>ФТ-301</strong></td><td><strong>ПИ-301</strong></td>
 		</tr>
 		<tr>
-			<td rowspan="12"><strong>П<br>О<br>Н<br>Е<br>Д<br>Е<br>Л<br>Ь<br>Н<br>И<br>К</strong></td>
+			<td rowspan="10"><strong>П<br>О<br>Н<br>Е<br>Д<br>Е<br>Л<br>Ь<br>Н<br>И<br>К</strong></td>
 			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2">Физика, 628</td><td rowspan="2">УМФ, 540</td><td class="half_height"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2">Прогр. Инж., 611</td>
 		</tr>
-		<tr><td class="half_height">ТЧМК, 625</td></tr>
+		<tr>
+            <td class="half_height">ТЧМК, 625</td>
+        </tr>
 		<tr>
 			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2">Функ.ан, 628</td><td rowspan="2">УМФ, 540</td><td rowspan="2">ТЧМК, 625</td><td rowspan="2">Базы Данных, 511</td><td rowspan="2">ДУ, 515</td><td class="half_height">КА, 512</td><td rowspan="2">Прогр. Инж., 514</td>
 		</tr>
-		<tr><td class="half_height">&nbsp;</td></tr>
+		<tr>
+            <td class="half_height">&nbsp;</td>
+        </tr>
 		<tr>
 			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2">Физ-мех практика, 149</td><td rowspan="2" colspan="4">Базы Данных, 632</td><td class="half_height">КА, 628</td>
 		</tr>
-		<tr><td class="half_height">КА, 514</td></tr>
+		<tr>
+            <td class="half_height">КА, 514</td>
+        </tr>
 		<tr>
 			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2">Базы Данных, 526</td><td class="half_height">КА, 625</td><td class="half_height">КА, 514</td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr><td class="half_height">КА, 514</td><td class="half_height">КА, 628</td></tr>
 		<tr>
-			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
-		</tr>
-		<tr></tr>
+            <td class="half_height">КА, 514</td><td class="half_height">КА, 628</td>
+        </tr>
 		<tr>
-			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="12"><strong>В<br>Т<br>О<br>Р<br>Н<br>И<br>К</strong></td>
-			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2">Дг ТВ, 628</td>
+			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2">Компл анализ, 513</td><td rowspan="2"></td><td rowspan="2" colspan="4">ТВ и МС, 632</td><td rowspan="2">Дг ТВ, 628</td>
+			<td rowspan="7"><strong>В<br>Т<br>О<br>Р<br>Н<br>И<br>К</strong></td>
+			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td>Дг ТВ, 628</td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2">Функ ан, 515</td><td rowspan="2">Уст и упр движ, 622</td><td rowspan="2" colspan="4">Ассемблер, 632</td><td rowspan="2">Базы данных, 540</td>
+			<td><strong>II<br>10:40</strong></td><td>Компл анализ, 513</td><td></td><td colspan="4">ТВ и МС, 632</td><td>Дг ТВ, 628</td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2">Компл анализ, 513</td><td rowspan="2">ТВ, 515</td><td rowspan="2">ТВ, 601</td><td rowspan="2">ДУ, 632</td><td rowspan="2">БД, 511</td><td rowspan="2">ТВ, 623</td><td rowspan="2">Базы данных, 514</td>
+			<td><strong>III<br>12:50</strong></td><td>Функ ан, 515</td><td>Уст и упр движ, 622</td><td colspan="4">Ассемблер, 632</td><td>Базы данных, 540</td>
 		</tr>
-		<tr></tr>
+		<tr>
+			<td><strong>IV<br>14:30</strong></td><td>Компл анализ, 513</td><td>ТВ, 515</td><td>ТВ, 601</td><td>ДУ, 632</td><td>БД, 511</td><td>ТВ, 623</td><td>Базы данных, 514</td>
+		</tr>
 		<tr>
 			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2">ск КМ, МЭ, 628</td><td rowspan="2">ТВ, 515</td><td class="half_height">КА, 605</td><td rowspan="2">ТВ, 608</td><td rowspan="2">ТВ, 623</td><td rowspan="2">БД, 514</td><td rowspan="2"></td>
 		</tr>
@@ -76,26 +78,21 @@
 			<td class="half_height">КА, 511</td>
 		</tr>
 		<tr>
-			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="12"><strong>С<br>Р<br>Е<br>Д<br>А</strong></td>
-			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td rowspan="7"><strong>С<br>Р<br>Е<br>Д<br>А</strong></td>
+			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2" colspan="7">Ф И З И Ч Е С К А Я&nbsp;&nbsp; К У Л Ь Т У Р А</td>
+			<td><strong>III<br>12:50</strong></td><td colspan="7">Ф И З И Ч Е С К А Я&nbsp;&nbsp; К У Л Ь Т У Р А</td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2">Базы данных, 611</td><td rowspan="2">Уст и упр движ, 628</td><td rowspan="2" colspan="3">Комбинаторные алгоритмы, 632</td><td rowspan="2" colspan="2">Интернет(Web и DHTML), 509</td>
+			<td><strong>IV<br>14:30</strong></td><td>Базы данных, 611</td><td>Уст и упр движ, 628</td><td colspan="3">Комбинаторные алгоритмы, 632</td><td colspan="2">Интернет(Web и DHTML), 509</td>
 		</tr>
-		<tr></tr>
 		<tr>
 			<td rowspan="2"><strong>V<br>16:10</strong></td><td class="half_height">БД, 514</td><td rowspan="2"></td><td rowspan="2" colspan="4">ск Матроиды и графы, 632</td><td rowspan="2">Интернет, 511</td>
 		</tr>
@@ -103,84 +100,65 @@
 			<td class="half_height">&nbsp;</td>
 		</tr>
 		<tr>
-			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="12"><strong>Ч<br>Е<br>Т<br>В<br>Е<br>Р<br>Г</strong></td>
-			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"><font color="red">Я</font></td><td rowspan="2"><font color="orange">ОЧЕНЬ</font></td><td rowspan="2"><font color="yellow">СИЛЬНО</font></td><td rowspan="2"><font color="green">УСТАЛ</font></td><td rowspan="2"><font color="cyan">ДЕЛАТЬ</font></td><td rowspan="2"><font color="blue">ЭТО</font></td><td rowspan="2"><font color="purple">РАСПИСАНИЕ</font></td>
+			<td rowspan="6"><strong>Ч<br>Е<br>Т<br>В<br>Е<br>Р<br>Г</strong></td>
+			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="12"><strong>П<br>Я<br>Т<br>Н<br>И<br>Ц<br>А</strong></td>
-			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td rowspan="6"><strong>П<br>Я<br>Т<br>Н<br>И<br>Ц<br>А</strong></td>
+			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="12"><strong>С<br>У<br>Б<br>Б<br>О<br>Т<br>А</strong></td>
-			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td rowspan="6"><strong>С<br>У<br>Б<br>Б<br>О<br>Т<br>А</strong></td>
+			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>V<br>16:10</strong><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 		<tr>
-			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
-		<tr></tr>
 	</table>
 </body>
 </html>
