--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 	<a href="schedule.html">Расписание</a><br>
 	<a href="registration.html">Регистрация</a><br>
-	<a href="media.html">@media print</a>
+	<a href="media.html">@media print</a><br>
+	<a href="sort.html">Сортировка таблицы</a>
 </body>
 </html>
