--- a/sort.html
+++ b/sort.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+	<title>Самая правильная сортировка</title>
     <style type="text/css">
         table {
             border: 1px solid black;
