--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<a href="schedule.html">Расписание</a><br>
 	<a href="registration.html">Регистрация</a><br>
 	<a href="media.html">@media print</a><br>
-	<a href="sort.html">Сортировка таблицы</a>
+	<a href="sort.html">Сортировка таблицы</a><br>
+    <a href="passphrase.html">Секретное слово</a>
 </body>
 </html>
