--- a/passphrase.html
+++ b/passphrase.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
     <title>Секретное слово</title>
     <script type="text/javascript" src="scripts.js"></script>
     <script type="text/javascript">
