--- a/passphrase.html
+++ b/passphrase.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Секретное слово</title>
-    <script type="text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="nyan/scripts.js"></script>
     <script type="text/javascript">
         var right = 0;
         document.onkeydown = function(event) {
