--- a/registration.html
+++ b/registration.html
@@ -8,10 +8,12 @@
 			font-family: Verdana;
 			font-size: 12px;
 		}
+
 		input[type=submit] {
 			background: #ff5200;
 			color: white;
 		}
+
 		table {
 			background: #eeeeee;
 			border: 1px solid grey;
@@ -20,9 +22,12 @@
 			left: 15%;
 			position: absolute;
 		}
+
 		td {
 			border: 1px solid grey;
+			padding: 4px;
 		}
+
 		.center {
 			background: #ffffee;
 			font-weight: bold;
@@ -71,7 +76,7 @@
 						<option value="0">-</option>
 						<option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option><option value="13">13</option><option value="14">14</option><option value="15">15</option><option value="16">16</option><option value="17">17</option><option value="18">18</option><option value="19">19</option><option value="20">20</option><option value="21">21</option><option value="22">22</option><option value="23">23</option><option value="24">24</option><option value="25">25</option><option value="26">26</option><option value="27">27</option><option value="28">28</option><option value="29">29</option><option value="30">30</option><option value="31">31</option>
 					</select>
-				
+
 					<select name="month">
 						<option value="0">-</option>
 						<option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option>
@@ -85,8 +90,11 @@
 			</tr>
 			<tr>
 				<td>(<span style="color: red;">*</span>) Ваш пол</td>
-				<td><input type="radio" name="sex" value="male">Мужчина<br>
-				<input type="radio" name="sex" value="female">Не мужчина</td>
+				<td>
+					<input type="radio" name="sex" value="male" id="man"><label for="man">Мужчина</label>
+					<br>
+					<input type="radio" name="sex" value="female" id="woman"><label for="woman">Не мужчина</label>
+				</td>
 				<td>&nbsp;</td>
 			</tr>
 			<tr>
@@ -94,21 +102,25 @@
 			</tr>
 			<tr>
 				<td>Зарегистрировать вас на E1.ru?:</td>
-				<td><input type="checkbox" name="regme">Я джва года хочу такой ящик в качестве пользователя на E1.ru</td>
+				<td>
+					<input type="checkbox" name="regme" id="regme"><label for="regme">Я джва года хочу такой ящик в качестве пользователя на E1.ru</label>
+				</td>
 				<td>Если у Вас до сих пор нет <a href="www.e1.ru/mye1">регистрации на E1.ru</a>, советуем Вам отметить данный пункт. Паролем для доступа на E1.ru будет Ваш пароль на почту.</td>
 			</tr>
 			<tr><td class="center" colspan="3">Вы человек?</td></tr>
 			<tr>
 				<td style="text-align: center;" colspan="3">
-					<input type="radio" value="robot" name="ishuman">Я сам нашел страницу с регистрацией(не человек)<br>
-					<input type="radio" name="ishuman" value="human">Мне понадобилась помощь(человек)
+					<input type="radio" value="robot" name="ishuman" id="robot"><label for="robot">Я сам нашел страницу с регистрацией(не человек)</label>
+					<br>
+					<input type="radio" name="ishuman" value="human" id="human"><label for="human">Мне понадобилась помощь(человек)</label>
 				</td>
 			</tr>
 			<tr><td class="center" colspan="3">Соглашение об использовании</td></tr>
 			<tr>
 				<td style="text-align: center;" colspan="3">
-					<input type="radio" name="agreement" value="human">Я ничего не читал но со всем согласен<br>
-					<input type="radio" name="agreement" value="robot">Я прочитал и согласен с <a href="http://www.e1.ru/help/article.php?user_agreement">Пользовательским соглашением</a>, а также с <a href="http://www.e1.ru/help/article.php?confidentiality">Политикой конфиденциальности</a> портала E1.RU(не человек)
+					<input type="radio" name="agreement" value="human" id="read"><label for="read">Я ничего не читал но со всем согласен</label>
+					<br>
+					<input type="radio" name="agreement" value="robot" id="noread"><label for="noread">Я прочитал и согласен с <a href="http://www.e1.ru/help/article.php?user_agreement">Пользовательским соглашением</a>, а также с <a href="http://www.e1.ru/help/article.php?confidentiality">Политикой конфиденциальности</a> портала E1.RU(не человек)</label>
 				</td>
 			</tr>
 			<tr>
